specs/blueprints/errors/validation/expected_fieldsets_got_section.eno
# Expecting fieldsets but getting an empty section

-- input
# section
-- input

-- javascript
eno.parse(input).fieldsets('section');
-- javascript

-- php
Eno\Parser::parse($input)->fieldsets('section');
-- php

-- python
enolib.parse(input).fieldsets('section')
-- python

-- ruby
Eno.parse(input).fieldsets('section')
-- ruby

## ValidationError

-- text
Only fieldsets with the key 'section' were expected, but a section with this key was found.
-- text

-- snippet
   Line | Content
 >    1 | # section
-- snippet

selection: [0,0] => [0,9]


# Expecting fieldsets but getting a section with a field and a list

-- input
# section

field: value

list:
- item
- item
-- input

-- javascript
eno.parse(input).fieldsets('section');
-- javascript

-- php
Eno\Parser::parse($input)->fieldsets('section');
-- php

-- python
enolib.parse(input).fieldsets('section')
-- python

-- ruby
Eno.parse(input).fieldsets('section')
-- ruby

## ValidationError

-- text
Only fieldsets with the key 'section' were expected, but a section with this key was found.
-- text

-- snippet
   Line | Content
 >    1 | # section
      2 | 
      3 | field: value
   ...
-- snippet

selection: [0,0] => [6,6]

# Expecting fieldsets but getting a section with subsections

-- input
# section

## subsection

field: value

## subsection

list:
- item
- item
-- input

-- javascript
eno.parse(input).fieldsets('section');
-- javascript

-- php
Eno\Parser::parse($input)->fieldsets('section');
-- php

-- python
enolib.parse(input).fieldsets('section')
-- python

-- ruby
Eno.parse(input).fieldsets('section')
-- ruby

## ValidationError

-- text
Only fieldsets with the key 'section' were expected, but a section with this key was found.
-- text

-- snippet
   Line | Content
 >    1 | # section
      2 | 
      3 | ## subsection
   ...
-- snippet

selection: [0,0] => [10,6]
